--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "jeopardyproject",
+  "description": "",
+  "version": "1.0.0",
+  "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "cd app && node server.js"
+  },
+  "keywords": [],
+  "author": "Peleg Merin and Noah Vaknin",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
 }
+
